@@ -18,6 +18,10 @@ The Grinder 3.5 (Not yet released)
    ever executing succesfully again. Thanks to Wallander for the
    report.
 
+   Fix bug 3132940 - Incorrect connect/DNS times when connect timeout
+   set. This was due to an errror in the fix for 3132940. Thanks to
+   Jagdish A for the report, and to Wallander for testing.
+
 
 The Grinder 3.4
 ---------------
